<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainerAdd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    android:padding="20dp">

    <View
        android:layout_centerHorizontal="true"
        android:id="@+id/line"
        android:layout_width="70dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/colorDivider" />
    <EditText
        android:layout_below="@id/line"
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:hint="@string/name"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryText"/>
    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_optional"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryText"/>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageButton
        android:layout_marginTop="10dp"
        android:id="@+id/ibAttach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image"
        android:tint="@color/colorSecondaryText"/>
    <TextView
        android:layout_below="@id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/attach_an_image_optional"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryText"/>

</LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="Submit"
        android:backgroundTint="@color/buttonColor"/>
    </LinearLayout>